--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -3,12 +3,11 @@ body {
     background-color:darkgrey
 }
 header {
-    background-color: firebrick;
+    background-color: firebrick; border: 10px outset firebrick;
 }
-footer {
-    background-color: firebrick;
+div.info{
+    text-align: center; background-color: rgb(38, 0, 255); color: whitesmoke;
 }
-/* Align the h1 containing your name in the center of the header*/
 h1 {
     text-align: center; font-size: 36pt; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -16,7 +15,7 @@ h3{
     text-align: center; font-size: 18pt; font-family: cursive;
 }
 p {
-    color: whitesmoke; font-size: 22pt; text-align: center;
+    color:darkgray; font-size: 22pt; text-align: center;
 }
 img {
     border: 8px solid rgb(0, 0, 0);
